syntax = "proto3";

package zksync.config.avail;

message Avail {
  optional string api_node_url = 1;
  optional string bridge_api_url = 2;
  optional string seed = 3;
  optional uint32 app_id = 4;
  optional uint64 timeout = 5;
  optional uint64 max_retries = 6;
  optional bool gas_relay_mode = 7;
  optional string gas_relay_api_url = 8;
  optional string gas_relay_api_key = 9;
}

// This wrapper is required to read the config from the file with nested structure
message AvailConfig {
  optional Avail avail = 1;
}
